# resume-parser

./: .gitignore  README.md  pyproject.toml  requirements.txt  res.json  response.json  responses1.json
core/: settings.py  test.py  urls.py
resparser/: admin.py  apps.py  forms.py  models.py  parse.py  serializers.py  urls.py  validate.py  views.py
resparser/migrations/: 0001_initial.py  0002_alter_resumeparser_file.py
templates/: UploadFile.html  base.html  success.html  success_template.html
