[tool.poetry]
name = "resume parser"
version = "0.1.0"
description = ""
authors = ["Shiranka23 <shivansh.kate@digimonk.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
