[tool.poetry]
name = "resume parser"
version = "0.1.0"
description = ""
authors = ["Shiranka23 <shivansh.kate@digimonk.in>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
python-dotenv = "^1.0.0"
requests = "^2.31.0"
djangorestframework = "^3.14.0"
drf-yasg2 = "^1.19.4"
drf-yasg = "^1.21.7"
psycopg2 = "^2.9.9"
django-cors-headers = "^4.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
